-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.5.6, 6.7.1
-
a8a091694 (dev), eda9675eb (6.8), 2bd4f8b80 (6.7), 3d9c69047 (tqtc/lts-6.5)
A sample .ts file is uploaded. Loading it into Linguist from Qt5/6 yields different results:
Qt5 Linguist: all good
Qt6 Linguist: broken plural rules (see screenshot)
The issue is language tag:
<TS version="2.1" language="en-US">
"en-US" is separated by dash. Replacing dash with underscore solves the problem.
Nevertheless, Linguist should be able to handle both dash and undrescore. Qt6 Linguist is more or less broken. Possible related commit:
https://codereview.qt-project.org/c/qt/qttools/+/343860
- relates to
-
QTBUG-112765 Create QLocaleSelector
-
- Open
-
For Gerrit Dashboard: QTBUG-126139 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
566686,4 | Linguist: Accept locale with dash as separator | dev | qt/qttools | Status: MERGED | +2 | 0 |
567883,2 | Linguist: Accept locale with dash as separator | 6.8 | qt/qttools | Status: MERGED | +2 | 0 |
568118,2 | Linguist: Accept locale with dash as separator | 6.7 | qt/qttools | Status: MERGED | +2 | 0 |
578065,2 | Linguist: Accept locale with dash as separator | tqtc/lts-6.5 | qt/tqtc-qttools | Status: MERGED | +2 | 0 |