Linguist: Accept locale with dash as separator

Linguist in Qt 5 did accept both 'fi_FI' and 'fi-FI' as language
in the .ts file. This got lost in Qt 5, which made some old/hand-crafted
.ts files to fail to be loaded correctly.

Pick-to: 6.5 6.7 6.8
Fixes: QTBUG-126139
Change-Id: I89eb9f03d74ac2cb0bf70c5a724bb9c639f2c2b7
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>