tests/auto/linguist/lupdate/testdata/good/language/main.cpp
@@ -1,0 +1,6 @@
+#include <QCoreApplication>
+
+int main()
+{
+    QCoreApplication::translate("main", "Hello %i World", "", 3);
+}
